# school_machine_room_file_transfer

./: README.md  Windows构建指南.md  build.py  build_student.spec  build_teacher.spec  create_windows_batch.py  cross_platform_build.py  main.py  pyproject.toml  student_app.py  teacher_app.py  test_simple_system.py  test_system.py  使用说明.md  学生端.spec  教师端.spec  部署指南.md  项目总结.md
