[project]
name = "school-file-transfer"
version = "1.0.0"
description = "学校机房文件传输系统"
authors = [{ name = "School IT", email = "it@school.edu" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]


[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
